<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phlog It</string>
    <string name="action_new_entry">New Entry</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_add_entry">Add Entry</string>
    <string name="action_save_entry">Save</string>
    <string name="title_hint">Enter title</string>
    <string name="text_hint">Enter description</string>
    <string name="cannot_get_camera">No camera found.</string>
    <string name="title_activity_view_entry">View Entry</string>
    <string name="action_delete_entry">Delete</string>
    <string name="view_title">Title:</string>
    <string name="view_text">Text:</string>
    <string name="view_location">Location:</string>
    <string name="view_orientation">Orientation:</string>
    <string name="view_created_at">Created At:</string>
	
</resources>
