<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	    android:gravity="center_horizontal"
	    tools:context="edu.miami.c08159659.phlogit.ViewEntry" >
	
		<ImageView android:id="@+id/entry_thumb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/image_bottom_margin"
	        android:adjustViewBounds="true" />
		<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/view_title" />
	    <TextView android:id="@+id/entry_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/view_text" />
	    <TextView android:id="@+id/entry_text"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="top" />
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/view_created_at" />
	    <TextView android:id="@+id/entry_created_at"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" /> 
	    <TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/view_location" />
	   	<TextView android:id="@+id/entry_location"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	   	<TextView
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/view_orientation" />
	   	<TextView android:id="@+id/entry_orientation"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
	</LinearLayout>
</ScrollView>
